# CarePulse

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  eslint.config.js  go.work  go.work.sum  index.js  package-lock.json  package.json  ruff.toml  sonar-project.properties
.claude/: settings.json
.cursor/: mcp.json
.github/workflows/: ci-go.yml  ci-node.yml  ci-python.yml  sonarcloud.yml
.husky/: pre-commit
adr/: README.md
apps/web/: README.md
contracts/: README.md
docs/architecture/: REPO_STRUCTURE.md
infra/: README.md
infra/cdk/: app.py  carepulse_stack.py  requirements.txt
infra/docker/: docker-compose.yml
scripts/: delete-carepulse-polyrepo-repos.sh  replay-projection.sh  replay-projection.ts  run-code-review-graph.sh
scripts/replay-projection/: go.mod  main.go
services/: README.md  tsconfig.nest-service.json
services/asset-registry/: README.md  go.mod  go.sum  main.go
services/billing-service/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.spec.json
services/fhir-gateway/: README.md  audit_middleware.py  conftest.py  main.py  pyproject.toml  test_audit_middleware.py  test_cds_hooks.py  test_fhir_schema.py  test_s3_bundles.py
services/gateway-graphql/: README.md  package-lock.json  package.json
services/jobs-worker/: README.md  package.json
services/notification-service/: README.md  package.json
services/risk-engine/: README.md  anomaly.py  main.py  pyproject.toml  test_risk_engine.py
services/search-indexer/: README.md  main.py  pyproject.toml  test_search_indexer.py
(+80 files in other folders)
