[project]
name = "search-indexer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11.0",
    "aiohttp>=3.9.0",
    "opensearch-py[async]>=2.6.0",
    "pydantic>=2.7.0",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
